<resources>
    <string name="app_name">TabbedScreen</string>
    <string name="tab_text_1">Phonebook</string>
    <string name="tab_text_2">Dialpad</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="home_page">Home Page</string>
    <string name="about_page">About Page</string>
    <string name="Dial">Please Enter the phone number you wish to call !</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="call">Call</string>
    <string name="topup">Who do you want to call?</string>
    <string name="search">Search</string>
    <string name="contact_name">Contact Name</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="email">Email</string>
    <string name="next">Next</string>
    <string name="Terms">By continuing, you allow us to use your information in accordance with our Terms &amp; Conditions and Privacy Notice.</string>
    <string name="new_here_sign_up_here">New Here? Sign up here</string>
    <string name="join_to_continue">Join to continue</string>
    <string name="checkbox">I\'d like to receive the latest promotions, exclusive deals and other news.</string>
    <string name="existing">Existing Customer? Log in here</string>
    <string name="password">Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="facebook_app_id">182442762436643</string>
    <string name="fb_login_protocol_scheme">fb182442762436643</string>
    <string name="request_client_id">67790666737-n4scneo90sg83ephbqus2unrfvq3vmkm.apps.googleusercontent.com</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="please_enter_your_email_address">Please enter your email address</string>
    <string name="reset">Reset</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login/SignUp</string>
</resources>
