<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingBottom="10dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:text="@string/join_to_continue"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

            <EditText
                android:id="@+id/signup_uname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <EditText
                android:id="@+id/signup_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorAccent"
            android:paddingBottom="10dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:paddingTop="10dp"
            android:textAlignment="center"
            android:textColor="@android:color/darker_gray"
            android:textSize="10sp"
            tools:ignore="SmallSp"
            android:text="@string/checkbox"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/signup_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@color/colorAccent"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingBottom="10dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:text="@string/Terms"
            android:textAlignment="center"
            android:textColor="@android:color/darker_gray"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <com.facebook.login.widget.LoginButton
            xmlns:facebook="http://schemas.android.com/apk/res-auto"
            facebook:com_facebook_login_text="Continue"
            facebook:com_facebook_logout_text="Continue"
            android:textSize="13sp"
            android:layout_gravity="center"
            android:id="@+id/fb_signup_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_signup_button"
            android:layout_gravity="center"
            android:layout_width="150dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center|bottom"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="#c0c0c0" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gofrom_signup"
            android:padding="15dp"
            android:text="@string/existing"
            android:textColor="@color/colorAccent"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textStyle="bold"/>
    </LinearLayout>



</RelativeLayout>